# Project-Slam

./: .gitignore  CMakeLists.txt  README.md
assets/shaders/: basic.frag  basic.vert  gbuffer.frag  gbuffer.vert  lighting.frag  shadow.vert
src/: main.cpp
src/game/: map_generator.cpp  map_generator.h  map_mesh.cpp  map_mesh.h
src/input/: input_manager.cpp  input_manager.h  window.cpp  window.h
src/renderer/: camera.cpp  camera.h  deferred_pipeline.cpp  deferred_pipeline.h  gbuffer.cpp  gbuffer.h  light.cpp  light.h  mesh.cpp  mesh.h  pipeline.cpp  pipeline.h  shadow_map.cpp  shadow_map.h  texture.cpp  texture.h  vulkan_context.cpp  vulkan_context.h
src/utils/: math.h  timer.h
tests/: CMakeLists.txt
tools/material_baker/: CMakeLists.txt  main.cpp  material_generator.cpp  material_generator.h  noise.h
