# Tests CMakeLists.txt
# Unit and integration tests for Slam Engine

# Test executable (placeholder)
# add_executable(slam_tests
#     test_main.cpp
#     test_physics.cpp
#     test_animation.cpp
#     test_network.cpp
#     test_map_generation.cpp
# )

# target_link_libraries(slam_tests
#     slam_core
#     gtest
#     gtest_main
# )

# add_test(NAME slam_tests COMMAND slam_tests)
